tests/ecc-aws-070-unused_ec2_security_groups/placebo-red/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "Managed by Terraform",
                "GroupName": "070_security_group_red",
                "IpPermissions": [],
                "OwnerId": "111111111111",
                "GroupId": "sg-1234567asdfg",
                "IpPermissionsEgress": [],
                "Tags": [
                    {
                        "Key": "CustodianRule",
                        "Value": "ecc-aws-070-unused_ec2_security_groups"
                    },
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Red"
                    }
                ],
                "VpcId": "vpc-12345asdfg"
            }
        ],
        "ResponseMetadata": {}
    }
}
